WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
252405
[GStreamer][WebRTC] Notify ICE candidates also if there's no corresponding mid
https://bugs.webkit.org/show_bug.cgi?id=252405
Summary
[GStreamer][WebRTC] Notify ICE candidates also if there's no corresponding mid
Philippe Normand
Reported
2023-02-16 09:27:20 PST
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-02-16 09:37:18 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10208
EWS
Comment 2
2023-02-18 02:17:40 PST
Committed
260505@main
(fab65f9ffd62): <
https://commits.webkit.org/260505@main
> Reviewed commits have been landed. Closing PR #10208 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-02-18 02:18:18 PST
<
rdar://problem/105628606
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug